fix header text not centered on phone displays

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -131,9 +131,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: -10%;
     }
 
     .main h1 {
         font-size: 3rem;
+        text-align: center;
     }
 }
